tests/Fixtures/views/errors/runtime_if_condition.tpl
<h1>Conditional</h1>
{if $user->getAuthIdentifier()}
  <p>yes</p>
{/if}
